# DataPath-YADRO

./: .gitignore  CMakeLists.txt  README.md
APP/: app.cpp  app.h  config_reader.cpp  config_reader.h  main.cpp
COMMON/: constants.h
CORE/: file_tape.cpp  file_tape.h  itape.h  run.h  run_reader.cpp  run_reader.h  run_writer.cpp  run_writer.h  tape_config.h  tape_sorter.cpp  tape_sorter.h
TOOLS/: binary_to_text.cpp  text_to_binary.cpp
data/: config.json  input.txt
tests/: config_reader_tests.cpp  file_tape_tests.cpp  tape_sorter_tests.cpp
